# arxiv_daily

./: .gitignore  LICENSE  README.md  main.py  pyproject.toml  run.sh  test.py  utils.py
assets/: scripts.js  styles.css
assets/templates/: paper_card_template.html
scripts/: query_single_paper.py
src/: __init__.py  config.py  html_report.py  main.py  markdown_report.py  postprocess.py  retrieve_paper.py  summarize.py  utils.py
src/api/: app.py  routes.py
src/cli/: main.py
src/config/: config.py  prompts.py  settings.py
src/data/: postprocess_paper.py  query_cool_papers.py  retrieve_paper.py  summarize.py
src/generation/: generate_markdown_report.py
src/utils/: __init__.py
src/web/: generate_html.py  template_loader.py
src/web/static/css/: styles.css
src/web/static/js/: scripts.js
src/web/templates/: main_layout_template.html  section_template.html
