[project]
name = "arxiv_daily"
version = "0.1.0"
description = "ArXiv daily paper tracking and analysis"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "arxiv>=2.2.0",
    "bs4>=0.0.2",
    "img2pdf>=0.6.1",
    "ipykernel>=6.29.5",
    "litellm>=1.68.1",
    "loguru>=0.7.3",
    "matplotlib>=3.10.3",
    "pandas>=2.3.3",
    "pillow>=11.2.1",
    "python-dotenv>=1.1.0",
    "rich>=14.0.0",
    "ruff>=0.14.0",
    "tqdm>=4.67.1",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/"]

[tool.ruff]
line-length = 88
target-version = "py310"

